Fixing horizontal scroll, customize hero to be nice looking in small screens.

--- a/src/style/sass/helpers/_mediaQ.scss
+++ b/src/style/sass/helpers/_mediaQ.scss
@@ -30,6 +30,7 @@ $extra_large_small_point: 1200px;
   }
 
   header.header.home-header {
+    height: 60vh;
     nav.navbar {
       .collapse.navbar-collapse {
         a {
@@ -127,6 +128,7 @@ $extra_large_small_point: 1200px;
   }
 
   header.header.home-header {
+    height: 60vh;
     .header.content {
       width: 100%;
       text-align: center;
